# libgramas

./: CMakeLists.txt  Makefile  README.md  buf.c  buf.h  buf_echo.c  build-tests.sh  cmd_parse.c  config.mk  field.c  gr_str.c  hash_map.c  list.c  matrix.c  packet.c  ptr_arr_echo.c  ptr_arr_test.c  ptr_array.c  ptr_array.h  space.c  str.c  test.sh  utf8.c
include/: buf.h  cmd_parse.h  field.h  gr_export.h  gr_str.h  hash_map.h  list.h  matrix.h  packet.h  ptr_array.h  space.h  str.h  utf8.h
include/gramas/: buf.h  cmd_parse.h  field.h  gr_str.h  hash_map.h  list.h  matrix.h  memdbg.h  packet.h  ptr_array.h  space.h  str.h  utf8.h
test/: ptr_arr_test.c  tst_buf2str.c  tst_hash_map_put.c  tst_hexdump.c  tst_list_append.c  tst_matrix_mul.c  tst_ptr_arr_add  tst_ptr_arr_add.c  tst_rdwr_bele.c  tst_rdwr_pck.c  tst_space_distance.c  tst_str_split.c  tst_str_split_p.c
